messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: messaging.local       # Custom local domain (can edit)
      http:
        paths:
          - path: /               # Root path
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service
                port:
                  number: 8000
          - path: /api/           # Example path for API routes
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service
                port:
                  number: 8000
